rest-api-project/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-api-deployment
  labels:
    app: rest-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rest-api
  template:
    metadata:
      labels:
        app: rest-api
    spec:
      containers:
      - name: rest-api
        image: foo:0.1
        ports:
        - containerPort: 8000
