rest-api-project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-service
spec:
  selector:
    app: rest-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
