rest-api-project/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: rest-api-ingress
  defaultBackend:
    service:
      name: rest-api-service
      port:
        number: 8000
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rest-api-service
            port:
              number: 8000
